--- a/saas/components/_footer.scss
+++ b/saas/components/_footer.scss
@@ -1,16 +1,29 @@
 .footer {
-    padding-top: 60px;
-    padding-bottom: 60px;
+    text-align: center;
+    padding: 60px 0px;
 
     background-color: var(--hero-background-color);
 }
 
 .footer__flex {
-    display: flex;
-
+    display: block;
     margin: 0;
-    padding: 0;
+    padding: 0px;
     list-style: none;
+
+    @media (min-width: 768px) {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 30px 165px;
+    }
+
+    @media (min-width: 1200px) {
+        display: flex;
+        justify-content: center;
+        text-align: left;
+        gap: 70px;
+    }
 }
 
 .footer__logo {
@@ -19,21 +32,13 @@
     }
 }
 
-.footer-contact__link.footer-contact__address.link {
-    color: var(--white-text-color);
-    &:hover,
-    &:focus {
-            color: var(--accent-color);
-    }
-}
-
-
-
 .footer-contact {
     margin-top: 20px;
 }
 
-
+.footer-contact__address {
+    color: var(--white-text-color);
+}
 
 .footer-contact__item {
     margin-top: 9px;
@@ -55,8 +60,14 @@
 }
 
 .social-section {
-    margin-left: 80px;
-    width: 206px;
+    display: block;
+
+    margin-top: 60px;
+    text-align: center;
+
+    @media (min-width: 768px) {
+        margin-top: 0px;
+    }
 }
 
 .social-section__text {
@@ -68,12 +79,20 @@
     text-transform: uppercase;
 
     color: var(--white-text-color);
+
+    @media (min-width: 768px) {
+        padding-bottom: 10px;
+    }
+
+    @media (min-width: 1200px) {
+        text-align: left;
+    }
 }
 
 .footer-list {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    justify-content: center;
 
     padding: 0;
     margin-top: 0;
@@ -83,10 +102,11 @@
 .footer-list__item {
     width: 44px;
     height: 44px;
+    margin-right: 10px;
 }
 
 .footer-list__link {
-    display: block;
+    display: flex;
 
     width: 44px;
     height: 44px;
@@ -111,7 +131,16 @@
 }
 
 .footer-submit {
-    margin-left: 93px;
+    margin-top: 60px;
+
+    @media (min-width: 768px) {
+        margin-top: 0px;
+        padding: 0;
+    }
+
+    @media (min-width: 1200px) {
+        margin-left: 23px;
+    }
 }
 
 .footer-submit__text {
@@ -126,27 +155,27 @@
 }
 
 .footer-submit__input {
-    width: 358px;
+    margin-bottom: 20px;
+
+    width: 100%;
     margin: 0;
-    padding: 15px 16px;
+    padding: 13px 16px;
     border-radius: 4px;
-    outline: none;
 
     border: 1px solid rgba(255, 255, 255, 0.3);
     background-color: var(--hero-background-color);
     color: var(--white-text-color);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-
-    &:focus,
-    &:hover {
-        border-color: var(--accent-color);
-    }
 
     &::placeholder {
         font-size: 16px;
         line-height: 1.25;
 
         color: rgba(255, 255, 255, 0.6);
+    }
+
+    @media (min-width: 1200px) {
+        width: 358px;
+        margin-right: 12px;
     }
 }
 
@@ -156,7 +185,7 @@
     justify-content: center;
 
     border: none;
-    margin: 0;
+    margin-top: 20px;
     padding: 8px 29px;
     border-radius: 4px;
 
@@ -173,11 +202,9 @@
 
     cursor: pointer;
     min-height: 43px;
-    margin-left: 12px;
-    
-    &:hover,
-    &:focus {
-        background-color: #188ce8;
+
+    @media (min-width: 1200px) {
+        margin-top: 0px;
     }
 
     &::after {
