--- a/saas/components/_modal.scss
+++ b/saas/components/_modal.scss
@@ -9,7 +9,7 @@
     height: 100vh;
 
     background-color: rgba(0, 0, 0, 0.2);
-    left: 0;
+
     top: 0;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
         visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -26,13 +26,23 @@
 }
 
 .modal {
-    width: 528px;
+    width: 320px;
     min-height: 581px;
     background-color: #ffffff;
 
     position: relative;
     transform: scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and (min-width: 480px) {
+        width: 450px;
+        min-height: 609px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 528px;
+        min-height: 581px;
+    }
 }
 
 .modal-icon {
@@ -63,13 +73,21 @@
 }
 
 .form {
-    width: 528px;
     margin-left: auto;
     margin-right: auto;
     padding: 40px;
+
+    @media screen and (min-width: 480px) {
+        width: 450px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 528px;
+    }
 }
 
 .form-title {
+    display: block;
     font-weight: 700;
     font-size: 20px;
     line-height: 1.15;
@@ -90,7 +108,7 @@
 .form-label,
 .comment-label {
     font-size: 12px;
-    line-height: 1.17;
+    line-height: 1.16;
     letter-spacing: 0.01em;
     color: var(--secondary-text-color);
     margin-bottom: 4px;
@@ -156,9 +174,13 @@ textarea {
 }
 
 .form-field-chek {
-    padding-left: 14px;
+    padding-left: 0px;
     margin-top: 25px;
     margin-bottom: 30px;
+
+    @media screen and (min-width: 1200px) {
+        padding-left: 14px;
+    }
 }
 
 .icon-chek {
@@ -193,16 +215,33 @@ textarea {
 }
 
 .policy-label {
+    position: relative;
     display: flex;
     align-items: center;
-    font-size: 14px;
-    line-height: 1.71;
+    font-size: 11px;
+    line-height: 1.14;
     color: var(--secondary-text-color);
+
+    @media screen and (max-width: 479px) {
+        font-size: 10px;
+        line-height: 1.11;
+    }
+
+    @media screen and (min-width: 1200px) {
+        font-size: 14px;
+        line-height: 1.71;
+    }
 }
 
 .policy-link {
-    margin-left: 4px;
+    margin-left: 3px;
     color: rgba(33, 150, 243, 1);
+
+    @media screen and (max-width: 479px) {
+        position: absolute;
+        top: 18px;
+        left: 21px;
+    }
 }
 
 .form-btn {
