--- a/saas/components/_reset.scss
+++ b/saas/components/_reset.scss
@@ -5,10 +5,6 @@ body {
     color: var(--primary-text-color);
 }
 
-img {
-    display: block;
-}
-
 .list {
     list-style: none;
 }
@@ -27,4 +23,10 @@ p,
 ul {
     margin: 0;
     padding: 0;
+}
+
+img {
+    display: block;
+    width: 100%;
+    height: auto;
 }
