--- a/saas/components/_team.scss
+++ b/saas/components/_team.scss
@@ -1,30 +1,55 @@
 .team {
-    padding-top: 94px;
-    padding-bottom: 94px;
-
+    padding-top: 60px;
+    padding-bottom: 60px;
     background-color: var(--team-background-color);
+
+    @media screen and (min-width: 1200px) {
+        padding-top: 94px;
+        padding-bottom: 94px;
+    }
 }
 
 .team__title {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 1.17;
+    text-align: center;
+
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 50px;
+        font-size: 36px;
+    }
 }
 
 .team-list {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    grid-gap: 30px;
 }
 
 .team-list__item {
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-    
-    
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
 
     background-color: var(--white-background-color);
-}
 
-.team-list__item {
-    &:not(:last-child) {
-        margin-right: 30px;
+    @media screen and (max-width: 479px) {
+        width: 270px;
+    }
+
+    @media screen and (min-width: 480px) {
+        width: 450px;
+    }
+
+    @media screen and (min-width: 768px) {
+        width: 354px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 270px;
     }
 }
 
@@ -50,24 +75,26 @@
 
 .team-list__social-list {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
 
     padding: 0px 32px;
     margin-top: 16px;
     list-style: none;
+    gap: 10px;
 }
 
 .team-list__social-item {
     width: 44px;
     height: 44px;
+
 }
 
 .team-list__social-link {
     display: block;
 
-    width: 100%;
-    height: 100%;
+    width: 44px;
+    height: 44px;
     border-radius: 50%;
 
     color: #afb1b8;
