--- a/saas/components/_hero.scss
+++ b/saas/components/_hero.scss
@@ -117,8 +117,8 @@
 
     &:hover,
     &:focus {
-        background-color: var(--white-text-color);
-        color: var(--accent-color);
+            background-color: #188ce8;
+            color: var(--white-text-color);
     }
 
     @media screen and (min-width: 480px) {
