--- a/saas/components/_footer.scss
+++ b/saas/components/_footer.scss
@@ -80,7 +80,7 @@
   margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
-  line-height: 1.14px;
+  line-height: 1.142;
   text-transform: uppercase;
 
   color: var(--white-text-color);
