--- a/saas/main.css
+++ b/saas/main.css
@@ -37,7 +37,8 @@ ul {
   padding: 0;
 }
 
-img {
+img, 
+source {
   display: block;
   width: 100%;
   height: auto;
@@ -373,7 +374,7 @@ img {
   margin-left: auto;
   margin-right: auto;
   background-color: var(--hero-background-color);
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/hero-mobile.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-mobile.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
