--- a/saas/components/_hero.scss
+++ b/saas/components/_hero.scss
@@ -6,7 +6,7 @@
     background-image: linear-gradient(to right,
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-        url("../img/hero-mobile.jpg");
+        url("../images/hero-mobile.jpg");
 
     @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
